kubernetes/apps/media/sonarr/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.poolnode.net`)
      kind: Rule
      services:
        - name: sonarr-service
          kind: Service
          namespace: media
          scheme: http
          port: 8989
  tls:
    secretName: poolnode-wildcard-tls
